added some e2ee and protocol adjustments